--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ body{
 
 nav{
     border: solid 5px black;
-    padding: 0px 0px 50px 0px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .Content{
@@ -45,6 +49,19 @@ div{
    
 }
 
+#globeDiv{
+    order: 1;
+    text-align: left;
+    vertical-align: middle;
+}
+
+#user{
+    order: 2;
+    text-align: center;  
+    vertical-align: middle;
+    min-width: 10px;
+}
+
 .imgBlock{
     float: left;
 }
@@ -63,3 +80,10 @@ div{
     width: 200px;
     height: auto;
 }
+
+#userImg, #title, #globe{
+    vertical-align: middle;
+}
+
+
+
