--- a/style.css
+++ b/style.css
@@ -1,51 +1,79 @@
+html{
+    height:100%
+}
+
 body{
     font: Serif, "Times New Roman" 14px;
     /* height: 500pt; */
+    height:100%
 }
 
 nav{
-    border: solid 5px black;
+   
     padding-top: 25px;
     padding-bottom: 25px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background-color: rgb(164, 193, 193);
+    border-radius: 5%;
+    z-index: 1;
+    overflow: hidden;
+    border-top: solid 2px black;
+}
+
+img{
+padding:5px;
+border-radius:5%;
 }
 
 .Content{
     display: flex;
     flex-direction: row;
-    border: solid 5px red;
+    /* border: solid 5px red; */
+    border-top: solid 2px black;
+   background-color: rgb(205, 179, 152);
+   height:100%;
+   position: relative;
+   top: -50px;
+   z-index: 2;
+   
    
 }
 
 div{
-    padding: 2px;
-    min-width: 300px;
+    padding: 8px;
+    min-width: 250px;
+    border-radius:5%;
 }
 
 .Left{
-    border: solid 3px rgb(140, 244, 37);
+    /* border: solid 3px rgb(140, 244, 37); */
     order: 1;
     flex-grow: 1;
     margin-bottom: 0;
-    padding-bottom: 900px;
+    /* padding-bottom: 900px; */
+}
+
+p{
+    padding:5px;
 }
 
 .Right{
- border: solid 3px rgb(247, 247, 110);
+ /* border: solid 3px rgb(247, 247, 110); */
  order: 3;
  flex-grow: 1;
  margin-bottom: 0;
- padding-bottom: 900px;
+ /* padding-bottom: 900px; */
 }
 
 .Center{
-   border: solid 3px rgb(61, 61, 245);
+   /* border: solid 3px rgb(61, 61, 245); */
    order: 2;
    flex-grow: 2;
    margin-bottom: 0;
-   padding-bottom: 900px;
+   
+  
    
 }
 
@@ -64,11 +92,18 @@ div{
 
 .imgBlock{
     float: left;
+    text-align: center;
+}
+
+.imgBlock1{
+    position: relative;
+    float: left;
 }
 .smallPic{
     width: 50px;
     height: auto;
     float:left;
+    border-radius: 15px;
 }
 .bigPic{
     width: 500px;
@@ -76,14 +111,22 @@ div{
     float:left;
 }
 
-#flask{
+.icon{
     width: 200px;
     height: auto;
+    text-align: center;
 }
 
 #userImg, #title, #globe{
     vertical-align: middle;
 }
 
+.imgBlockCenter{
+    background-color:white;
+    min-height: 500px;
+    border-radius: 5%;
+    margin-bottom: 30px;
+    
+}
 
 
